Replace usage of `List#of` with `Collections#singletonList`