@@ -7,6 +7,7 @@ import lombok.experimental.FieldDefaults;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayDeque;
+import java.util.Collections;
 import java.util.Deque;
 import java.util.Iterator;
 import java.util.List;
@@ -346,7 +347,7 @@ public class Node implements Iterable<Node> {
     public @NotNull Iterator<Node> iterator() {
         return new Iterator<>() {
 
-            private final Deque<Node> stack = new ArrayDeque<>(List.of(Node.this));
+            private final Deque<Node> stack = new ArrayDeque<>(Collections.singletonList(Node.this));
 
             @Override
             public boolean hasNext() {
